# nba_blog

./: .gitattributes  README.md  _publish.yml  _quarto.yml  about.qmd  index.qmd  pyproject.toml  requirements.txt  subscribe.html
.github/workflows/: publish.yml
_freeze/posts/halloween_2022/halloween_2022/execute-results/: html.json
_freeze/posts/jokic_tracker/index/execute-results/: html.json
_freeze/posts/quarto_basics/quarto_basics_index/execute-results/: html.json
_freeze/posts/reading_polls/reading_polls_index/execute-results/: html.json
_site/: about.html  index.html  listings.json  robots.txt  search.json  sitemap.xml
_site/posts/jokic_tracker/: index.html
_site/site_libs/bootstrap/: bootstrap.min.css
assets/theme/: dark.css  light.css
data/: triple-double-tracker.db  triple-double-tracker.db.wal
posts/advent_2024/: advent_2024.qmd
posts/advent_of_code/: advent_of_code.qmd
posts/data_engineering/: index.qmd
posts/halloween_2022/: halloween_2022.qmd
posts/jokic_tracker/: database-updater.py  index.qmd
posts/pitch_movement/: index.qmd
posts/quarto-website-creation/: website_index.qmd
posts/quarto_basics/: quarto_basics_index.qmd
posts/reading_polls/: reading_polls_index.qmd
posts/style_guide/: collaboration_style_guide.qmd
src/: database-updater.py  get-upcoming-schedule.py
