[tool.poetry]
name = "nba-blog"
version = "0.1.0"
description = ""
authors = ["DamonCharlesRoberts <damon.charles.roberts@gmail.com>"]
readme = "README.md"
packages = [{include = "nba_blog"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nba-api = "^1.3.1"
jupyter = "^1.0.0"
pandas = "^2.1.1"
duckdb = "^0.9.1"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
