[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Damon's blog"
authors = ["DamonCharlesRoberts <damon.charles.roberts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^0.20.7"
pybaseball = "^2.2.7"
plotly = "^5.18.0"
jupyter = "^1.0.0"
duckdb = "^0.10.0"
nba-api = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
